--- a/projects_description.Rmd
+++ b/projects_description.Rmd
@@ -169,11 +169,11 @@ xxx
  
 Список участников:
 
-1. Бялошицкая Полина
-2. Григорьев Артём
-3. Жуков Николай
-4. Кокунина Анастасия
-5. Сербина Лариса
+1. Бялошицкая Полина (логистика)
+2. Григорьев Артём (социология)
+3. Жуков Николай (социология)
+4. Кокунина Анастасия (логистика)
+5. Сербина Лариса (логистика)
 
 xxx
 
