月のために！

--- a/projects_description.Rmd
+++ b/projects_description.Rmd
@@ -218,3 +218,29 @@ xxx
 Все данные уже собраны)
 
 xxx
+
+
+=====
+##Рекомендательная система: досуг в Китае
+В ходе нашего проекта мы хотим сделать рекомендательную систему, которая на основе данных из китайского аналога трипэдвайзора (так как в обычном возможности для кутежа в Китае раскрыты не полностью) будет рекомендовать иностранцам развлекательные места в Китае. Мы собираемся разделить такие места по категориям: еда, развлечения и покупки. Для каждой категории предполагается собирать данные о местоположении, средних ценах, оценки качества самих мест (на основе пользовательских оценок).
+
+Развлечения: 
+1.Кузнецова Анастасия (социология)
+2.Атарова Алиса (востоковедение)
+3.Смирнова Алёна (экономика)
+4.Дудка Катя (востоковедение)
+5.Чуприна Дарья (востоковедение)
+
+Еда:
+1.Чернышова Валерия (востоковедение)
+2.Error 404 Not found (yet)
+3.Кобец Александра (востоковедение)
+4.Error 404 Not found (yet)
+5.Тихонова Антонина (востоковедение)
+
+Шопинг:
+1.Помозов Никита (востоковедение)
+2.Мишина Злата (востоковедение)
+3.Error 404 Not found (yet)
+4.Error 404 Not found (yet)
+5.Чуприн Никита (востоковедение)
