--- a/projects_description.Rmd
+++ b/projects_description.Rmd
@@ -40,6 +40,7 @@ xxx
 1. Ким Павел (Экономика)
 2. Лопушанский Денис (Экономика)
 3. Орлова Дарья (Экономика)
+4. Синкевич Андрей (БЭК)
 ...
  
 Дополнительные коментарии и пожелания к другим участникам.
