--- a/projects_description.Rmd
+++ b/projects_description.Rmd
@@ -40,7 +40,7 @@ xxx
 1. Ким Павел (Экономика)
 2. Лопушанский Денис (Экономика)
 3. Орлова Дарья (Экономика)
-4. Синкевич Андрей (БЭК)
+
 ...
  
 Дополнительные коментарии и пожелания к другим участникам.
@@ -128,6 +128,7 @@ xxx
 2. Порозова Вероника (Экономика), 
 3. Гасанова Сабина (Менеджмент), 
 4. Ермакова Катерина  (Востоковедение), 
+5. Синкевич Андрей (Экономика)
 
 
 xxx
