--- a/projects_description.Rmd
+++ b/projects_description.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Projects description"
-author: "Alexander Sirotkin"
+author: "Elvira Yushkova"
 date: "18 02 2017"
 output: html_document
 ---
@@ -8,244 +8,18 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
- Данный файл предназначен для внесения проектов.
- Ниже приведен шаблон которым нужно пользоваться. Копируете блок от "xxx" до "xxx" и вносите необходимую информацию.
+##Рекомендационная система фильмов и городов
 
-xxx
-
-## название проекта  
-
-Здесь должно быть краткое описание проекта, примерно один абзац.
+Для нашего проекта есть базаданных о Топ-250 фильмах с IMDB с оценками и локациями, где снимали каждый из этих фильмов. Рекомендационная система в идеале должна при выборе пользователем его любимых фильмов, выдавать ему место, где ему стоит провести свой отпуск. Например, если 3 фильма снимались в 15 разных местах, то рекомендационная система будет наносить эти места на карту и искать близкие места друг к другу. Результат - горо, страна или географическая область, которая является одним из кластеров локаций, находящихся рядом по географическому принципу.
  
 Список участников:
 
-1. Фио (специальность)
-2. Фио (специальность)
+1. Эльвира Юшкова (социология)
+2. Морозов Илья  (социология)
+3. Надежда Чистякова (менеджмент) 
 ...
  
-Дополнительные коментарии и пожелания к другим участникам.
 
-xxx
 
 
-Здесь должно быть краткое описание проекта, примерно один абзац.
- 
- В целом, проект - это рекомендательная система, которая подбирает наиболее подходящий портфель для инвестирования на бирже (не трейдинг, а именно инвестирование).
-На данном этапе задумка заключает в себе систему, которая поможет выбрать наилучший вариант для инвестора (даже не особо смыслящего в риске). Грубо говоря, процесс следующий: "укажите располагаемую Вами сумму, какое у Вас отношение к риску, укажите интервал для инвестирования".
-Наверняка этот вариант будет усилен еще как-либо.
-Группа уже состоит из трех человек (пока что только экономисты, так как, сами понимаете, эта тема довольно специфичная, но интересная). Поэтому, если Вы разрешите данный проект, то мы опубликуем на форуме набор 2 человек (вероятнее всего с каких-либо других ОП).
- 
-Список участников:
 
-1. Ким Павел (Экономика)
-2. Лопушанский Денис (Экономика)
-3. Орлова Дарья (Экономика)
-<<<<<<< HEAD
-
-=======
->>>>>>> 134dc4da02b2ce7a20fedd35a47f7c57b86af7b3
-...
- 
-Дополнительные коментарии и пожелания к другим участникам.
-
-xxx
-
-Здесь должно быть краткое описание проекта, примерно один абзац.
- 
-Описание добавим чуть позже... Но это будет рекомендации постов в ВК на основе текст майнинга.
- 
-Список участников:
-
-1. Худяков Юрий (Социология)
-2. Будаева Александра (Социология)
-3. Письменная Екатерина (Менеджмент)
-4. ??? инкогнито (надеемся вы поможете) ???
-5. ??? инкогнито (надеемся вы поможете) ???
-
-
-xxx
-
-## Лучшая шаурма в СПб и ЛО (название может поменяться...)
-
-Рекомендательная система кафе в спб и ло с шаурмой.
-На основе предпочтений (понравилось там-то, люблю побольше соуса или что-то в этом роде) выдаёт места, которые Вам стоит посетить.
-Дату тянем с паблика вк - возможность, теоритически, есть.
- 
-Список участников:
-
-1. Руслан Угланов (политология)
-2. Никита Веселов (ГМУ)
-3. Глеб Албегов (политология)
-4. Василина Чарушина (социология)
-5. Руслан Ефимов (менеджмент)
-6. Даниил Зуев (ГМУ)
- 
-
-xxx
-
-
-xxx
-
-## steam database recommendation system 
-
-Рекомендательная система игр (платформа steam).
-Ссылка на источник датасета: https://www.reddit.com/r/MachineLearning/comments/3q8w47/here_are_some_free_datasets_of_video_game_reviews/
-+ еще что-нибудь можем достаточно
- 
-Список участников:
-
-1. Кузьмин Павел Григорьевич (экономика)
-2. Шикин Антон Александрович (экономика)
-3. Шабурова Дарья Андреевна (экономика)
-4. Козырев Захар Антонович (менеджмент)
-
-xxx
-
-## Рекомендательная система в области логистики 
-
-Данная система будет основываться на базе крупных и средних экспедиторов и грузоперевозчиков и будет советовать оптимального перевозчика основываясь на следующих параметрах: вес груза, дальность перевозки, стоимость перевозки, время транспортировки, рекомендуемый транспорт. Число параметров может возрасти. 
-
-Список участников: 
-
-1. Аникина Наталья (Логистика и УЦП), 
-2. Кудрявцев Дмитрий (Логистика и УЦП), 
-3. Сипинев Глеб (Логистика и УЦП), 
-4. Усович Ксения (Логистика и УЦП), 
-5. Шарков Илья (Логистика и УЦП). 
-
-Поскольку наша рекомендательная система не является общенаправленной, а имеет отношение только к одной образовательной программе (Логистика), просим вас принять это во внимание во время принятия решения). 
-
-xxx
-
-xxx
-
-## Рекомендательная система для сериалов южно-корейского производства 
-
-Рекомендательная система по дорамам (южно-корейским сериалам) на основе данных с myshows.ru 
-Система будет выдавать рекомендации пользователям сайта на основе просмотренных дорам и их оценок.
-
-
-Список участников: 
-
-1. Максимова Мария (Экономика), 
-2. Порозова Вероника (Экономика), 
-3. Гасанова Сабина (Менеджмент), 
-4. Ермакова Катерина  (Востоковедение), 
-5. Синкевич Андрей (Экономика) 
-
-
-xxx
-
-
-## Рекомендательная система по местам/событиям СПб 
-
-На основании ряда характеристик пользователя (ВК) предлагать посетить какое-либо событие или мероприятие, учитывая текущие события в городе (освещенность в соцсетях, новостях... ). В результате можно сделать карту города с размеченными местами, личными рекомендациями и рядом фильтров (или бота).
-
-Список участников: 
-
-1. Смирнова Анна (экономика)
-2. Козлов Станислав (логистика)
-3. Дорноступ Ольга (экономика)
-4. Константинова Ксения (социология)
-5. Бахитова Алина (социология)
-
-xxx 
-
-
-## Рекомендательная система вопросов на сайте theQuestion
-
-На основе данных пользователя ВК (подписки, группы) рекомендовать вопросы на https://thequestion.ru
-
-Список участников: 
-
-1. Ефимова Вероника (экономика)
-2. Кирягина Дарья (экономика)
-3. Ахмедов Дмитрий (экономика)
-4. Паранина Татьяна (социология)
-5. Мороз Полина (социология)
-
-xxx
-
-=======
-
-## DAVAI POZHENIMSYA  
-
-На основе данных полученных после проведения свиданий, демографических данных и опросов создать рекомендательную систему по подбору партнера. 
- 
-Список участников:
-
-1. Бялошицкая Полина (логистика)
-2. Григорьев Артём (социология)
-3. Жуков Николай (социология)
-4. Кокунина Анастасия (логистика)
-5. Сербина Лариса (логистика)
-
-xxx
-
-xxx
-
-## Рекомендательная система Баров Санкт-Петербурга 
-
-Актуальность: постоянно растущее как грибы после дождя число баров в городе на Неве превращает поиск бара, который придется тебе по душе в занятие неприятное и долгое. Наша цель: создать рекомендательную систему баров, которая будет подсказывать пользователю, какой бар посетить следующим, основываясь на барах в которых до этого бывал пользователь (указываются им самим) и на его предпочтениях.  
-
-Список участников:
-
-1. Баженов Никита (Социология)
-2. Сергеева Маруся (Социология)
-3. Ефремова Лена (Логистика и УЦП)
-4. Гарифзянова Соня (Логистика и УЦП)
-5. Мамедов Гадир (Политология)
-...
- 
-Предполагаем сбор данных о меню, местоположении, ценах и «атмосфере» баров с сайтов(restoclub например), но если мы будем притворяться фирмой, которая собирается создать такое приложение для телефона, то возможна рассылка гугл формы по администраторам групп баров…..хотя наверное все таки restoclub.
-
-ххх
-
-## Travel recommendation based on AirBNB 
-
-+Берем отзывы AirBNB
-+Берем характеристики квартиры, где останавливался клиент
-+Смотрим, какая квартира в каком городе из интересующих наиболее похожа на те, в которых он уже останавливался
-+Рекомендуем
-+...
-+Профит
-
-
-Список участников:
-
-1. Мишалкин Иван (эконом)
-2. Гаев Антон (логистика)
-3. Багаутдинова Айсылу (логистика)
-4. Барило Екатерина (эконом)
-5. Вакантно
-...
-
-Все данные уже собраны)
-
-xxx
-
-
-=====
-##Рекомендательная система: досуг в Китае
-В ходе нашего проекта мы хотим сделать рекомендательную систему, которая на основе данных из китайского аналога трипэдвайзора (так как в обычном возможности для кутежа в Китае раскрыты не полностью) будет рекомендовать иностранцам развлекательные места в Китае. Мы собираемся разделить такие места по категориям: еда, развлечения и покупки. Для каждой категории предполагается собирать данные о местоположении, средних ценах, оценки качества самих мест (на основе пользовательских оценок).
-
-Развлечения: 
-1.Кузнецова Анастасия (социология)
-2.Атарова Алиса (востоковедение)
-3.Смирнова Алёна (экономика)
-4.Дудка Катя (востоковедение)
-5.Чуприна Дарья (востоковедение)
-
-Еда:
-1.Чернышова Валерия (востоковедение)
-2.Error 404 Not found (yet)
-3.Кобец Александра (востоковедение)
-4.Error 404 Not found (yet)
-5.Тихонова Антонина (востоковедение)
-
-Шопинг:
-1.Помозов Никита (востоковедение)
-2.Мишина Злата (востоковедение)
-3.Error 404 Not found (yet)
-4.Error 404 Not found (yet)
-5.Чуприн Никита (востоковедение)
